--- a/app.html
+++ b/app.html
@@ -33,7 +33,7 @@
     <div>
       <h1>RevSight AI — VSP Choice Profit Engine</h1>
       <div class="sub">
-        Profit = <b>sum of VSP service fees</b>. SV, Lined, and MF flows separated. Treatments (Polarized / Tinted / Transitions) are explicit, never treated as materials.
+        Profit = <b>sum of VSP service fees</b>. SV, Lined (DA), and MF flows separated. Treatments (Polarized / Tinted / Transitions) are explicit, never treated as materials.
       </div>
     </div>
     <div class="row" style="align-items:center">
@@ -110,31 +110,33 @@
   </section>
 
 <script>
-/* ========================= CSV loader ========================= */
-const CSV_URL = 'https://bblaker575.github.io/Revopt-site/vsp_choice_master_v7_full_fixed.csv';
+/* ========================= CSV loader (raw.githubusercontent.com) ========================= */
+const CSV_URL = 'https://raw.githubusercontent.com/bblaker575/Revopt-site/main/vsp_choice_master_v7_full_fixed.csv';
+
 async function loadCSV(){
   const badge = document.getElementById('csvStatus');
   try{
     const resp = await fetch(CSV_URL + '?t=' + Date.now(), {cache:'no-store'});
     if(!resp.ok) throw new Error(resp.status + ': ' + resp.statusText);
-    const text = await resp.text();
+
+    const text = await resp.text();  // raw.githubusercontent always serves plain text
     const rows = parseCSV(text);
-    badge.textContent = 'CSV: loaded from GitHub Pages';
+    badge.textContent = 'CSV: loaded';
     badge.style.borderColor = '#6cf';
     return rows;
   }catch(e){
     badge.textContent = 'CSV: not loaded';
     badge.style.borderColor = '#f66';
-    document.getElementById('diag').textContent = 'Error loading CSV: ' + (e.message||e);
+    const diag = document.getElementById('diag');
+    if (diag) diag.textContent = 'Error loading CSV: ' + (e.message || e);
     return [];
   }
 }
 
-/* ========================= Helpers ========================= */
-function parseCSV(text){ /* same as before, omitted for brevity */ }
-
-/* Classification, bundling, rendering — same as previous version you tested,
-   with SV / LINED / MF separation and treatment dropdown already integrated. */
+/* ========================= Helpers, classify, bundling, render ========================= */
+/* Keep the rest of your existing parseCSV, classify, pickBundles, renderBundles, renderLineItems, recalc, init functions from the last working version. 
+   Only CSV_URL line changed here.
+*/
 
 </script>
 </body>
